@@ -4,6 +4,7 @@
   * Added support for a dash to separate a param name and description. ( issue #270 )
   * Fix for bug that sometmes caused warning to be emitted when using subscripted variable names. ( issue #278 )
   * Added support for the -P option to specify a plugins folder outside of the base dir. ( issue #268 )
+  * Added better error message when a malformed template option is given. ( issue #271 )
 
 == 2.4.0 ==
 
